Fix scroll on mobile

--- a/www/styles.css
+++ b/www/styles.css
@@ -204,6 +204,12 @@
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
+  .h-dvh {
+    height: 100dvh;
+  }
+  .min-h-dvh {
+    min-height: 100dvh;
+  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -243,9 +249,6 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
-  }
-  .py-8 {
-    padding-block: calc(var(--spacing) * 8);
   }
   .text-center {
     text-align: center;
